--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "http-delayed-response": "0.0.4",
     "lighthouse-batch": "^6.0.0",
     "node-cmd": "^3.0.0",
     "serve-index": "^1.9.1"
